[gd_scene load_steps=4 format=3 uid="uid://b6r7anpfl0x2r"]

[ext_resource type="Script" path="res://Debug/debug_terminal.gd" id="1_w06kk"]
[ext_resource type="Theme" uid="uid://dycabqg11x6ba" path="res://Debug/debug_theme.tres" id="2_gpr77"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kbfya"]
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color(0.14902, 0.14902, 0.14902, 1)

[node name="DebugTerminal" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_w06kk")

[node name="BackgroundTint" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.333333)

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_gpr77")
theme_override_constants/margin_left = 250
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 250
theme_override_constants/margin_bottom = 50

[node name="Panel" type="Panel" parent="Margin"]
layout_mode = 2

[node name="Padding" type="MarginContainer" parent="Margin/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Margin/Panel/Padding"]
layout_mode = 2

[node name="Header" type="HBoxContainer" parent="Margin/Panel/Padding/VBoxContainer"]
layout_mode = 2

[node name="ConsoleTitle" type="Label" parent="Margin/Panel/Padding/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CloseButton" type="Button" parent="Margin/Panel/Padding/VBoxContainer/Header"]
layout_mode = 2
text = "Close"

[node name="HistoryScrollContainer" type="ScrollContainer" parent="Margin/Panel/Padding/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_kbfya")
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="HistoryContent" type="VBoxContainer" parent="Margin/Panel/Padding/VBoxContainer/HistoryScrollContainer"]
layout_mode = 2

[node name="Footer" type="HBoxContainer" parent="Margin/Panel/Padding/VBoxContainer"]
layout_mode = 2

[node name="CommandInput" type="LineEdit" parent="Margin/Panel/Padding/VBoxContainer/Footer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Enter \"help\" for a list of commands"

[node name="SendButton" type="Button" parent="Margin/Panel/Padding/VBoxContainer/Footer"]
layout_mode = 2
text = "Send"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="Margin/Panel/Padding/VBoxContainer/Header/CloseButton" to="." method="_on_close"]
[connection signal="text_submitted" from="Margin/Panel/Padding/VBoxContainer/Footer/CommandInput" to="." method="_process_command"]
[connection signal="pressed" from="Margin/Panel/Padding/VBoxContainer/Footer/SendButton" to="." method="_on_send"]
